[gd_scene load_steps=16 format=3 uid="uid://bs4nyna76vxqf"]

[ext_resource type="Script" uid="uid://c4sw362kchbba" path="res://character_display.gd" id="1_udruc"]
[ext_resource type="Script" uid="uid://cjbfskvo6ecoh" path="res://timer_label.gd" id="4_7k6yl"]
[ext_resource type="Texture2D" uid="uid://cw3l7yfokfb0r" path="res://timer_font/0.png" id="5_m1k5x"]
[ext_resource type="Texture2D" uid="uid://synttlx368k0" path="res://timer_font/1.png" id="6_7k6yl"]
[ext_resource type="Texture2D" uid="uid://2c8vedu3ig3h" path="res://timer_font/2.png" id="7_m1k5x"]
[ext_resource type="Texture2D" uid="uid://cfcnlyupj0kij" path="res://timer_font/3.png" id="8_7k6yl"]
[ext_resource type="Texture2D" uid="uid://rhg4qcp6x8nk" path="res://timer_font/4.png" id="9_wgm57"]
[ext_resource type="Texture2D" uid="uid://c2axi04p0qbyi" path="res://timer_font/5.png" id="10_3ammd"]
[ext_resource type="Texture2D" uid="uid://c5p8tun6f3ruo" path="res://timer_font/6.png" id="11_w06k5"]
[ext_resource type="Texture2D" uid="uid://dklrsfbkplfni" path="res://timer_font/7.png" id="12_c10ax"]
[ext_resource type="Texture2D" uid="uid://chrlf6yg8ogv4" path="res://timer_font/8.png" id="13_7g4lx"]
[ext_resource type="Texture2D" uid="uid://ck7e35nyd4oal" path="res://timer_font/9.png" id="14_iseq2"]
[ext_resource type="Texture2D" uid="uid://6agqtqs8s27c" path="res://timer_font/colon.png" id="15_xttx8"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0h12l"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_udruc"]
size = Vector2(42.984833, 128)

[node name="CharacterDisplay" type="Node2D"]
script = ExtResource("1_udruc")

[node name="CharacterArea" type="Area2D" parent="."]

[node name="CharacterCollision" type="CollisionShape2D" parent="CharacterArea"]
position = Vector2(1, 1)
shape = SubResource("RectangleShape2D_0h12l")

[node name="Sprite2D" type="Sprite2D" parent="."]

[node name="TimerLabel" type="Node2D" parent="."]
scale = Vector2(0.4, 0.4)
script = ExtResource("4_7k6yl")
tex_digits_white = Array[Texture2D]([ExtResource("5_m1k5x"), ExtResource("6_7k6yl"), ExtResource("7_m1k5x"), ExtResource("8_7k6yl"), ExtResource("9_wgm57"), ExtResource("10_3ammd"), ExtResource("11_w06k5"), ExtResource("12_c10ax"), ExtResource("13_7g4lx"), ExtResource("14_iseq2")])
tex_digits_red = Array[Texture2D]([ExtResource("5_m1k5x"), ExtResource("6_7k6yl"), ExtResource("7_m1k5x"), ExtResource("8_7k6yl"), ExtResource("9_wgm57"), ExtResource("10_3ammd"), ExtResource("11_w06k5"), ExtResource("12_c10ax"), ExtResource("13_7g4lx"), ExtResource("14_iseq2")])
tex_colon_white = ExtResource("15_xttx8")
tex_colon_red = ExtResource("15_xttx8")

[node name="Control" type="Control" parent="TimerLabel"]
layout_mode = 3
anchors_preset = 0
offset_left = -234.0
offset_top = 5.0
offset_right = 239.0
offset_bottom = 46.0
mouse_filter = 2

[node name="Year10" type="Sprite2D" parent="TimerLabel/Control"]
position = Vector2(-918, -5)
scale = Vector2(0.25, 0.25)

[node name="Year1" type="Sprite2D" parent="TimerLabel/Control"]
position = Vector2(-758, -5)
scale = Vector2(0.25, 0.25)

[node name="Colon1" type="Sprite2D" parent="TimerLabel/Control"]
position = Vector2(-598, -5)
scale = Vector2(0.25, 0.25)

[node name="Month10" type="Sprite2D" parent="TimerLabel/Control"]
position = Vector2(-438, -5)
scale = Vector2(0.25, 0.25)

[node name="Month1" type="Sprite2D" parent="TimerLabel/Control"]
position = Vector2(-278, -5)
scale = Vector2(0.25, 0.25)

[node name="Colon2" type="Sprite2D" parent="TimerLabel/Control"]
position = Vector2(-118, -5)
scale = Vector2(0.25, 0.25)

[node name="Day10" type="Sprite2D" parent="TimerLabel/Control"]
position = Vector2(42, -5)
scale = Vector2(0.25, 0.25)

[node name="Day1" type="Sprite2D" parent="TimerLabel/Control"]
position = Vector2(202, -5)
scale = Vector2(0.25, 0.25)

[node name="Colon3" type="Sprite2D" parent="TimerLabel/Control"]
position = Vector2(362, -4)
scale = Vector2(0.25, 0.25)

[node name="Hour10" type="Sprite2D" parent="TimerLabel/Control"]
position = Vector2(522, -5)
scale = Vector2(0.25, 0.25)

[node name="Hour1" type="Sprite2D" parent="TimerLabel/Control"]
position = Vector2(682, -5)
scale = Vector2(0.25, 0.25)

[node name="Colon4" type="Sprite2D" parent="TimerLabel/Control"]
position = Vector2(842, -7)
scale = Vector2(0.25, 0.25)

[node name="Min10" type="Sprite2D" parent="TimerLabel/Control"]
position = Vector2(1002, -8)
scale = Vector2(0.25, 0.25)

[node name="Min1" type="Sprite2D" parent="TimerLabel/Control"]
position = Vector2(1162, -7)
scale = Vector2(0.25, 0.25)

[node name="Colon5" type="Sprite2D" parent="TimerLabel/Control"]
position = Vector2(1322, -9)
scale = Vector2(0.25, 0.25)

[node name="Sec10" type="Sprite2D" parent="TimerLabel/Control"]
position = Vector2(1482, -5)
scale = Vector2(0.25, 0.25)

[node name="Sec1" type="Sprite2D" parent="TimerLabel/Control"]
position = Vector2(1642, -5)
scale = Vector2(0.25, 0.25)

[node name="WorldEnvironment" type="WorldEnvironment" parent="TimerLabel/Control"]

[node name="TimerArea" type="Area2D" parent="TimerLabel/Control"]
position = Vector2(373.99994, -4.9999804)
rotation = 3.1415927
scale = Vector2(1.4846992, -0.09702823)

[node name="TimerCollision" type="CollisionShape2D" parent="TimerLabel/Control/TimerArea"]
position = Vector2(-13.470741, -0.00048828125)
scale = Vector2(43.2256, 1.9999999)
shape = SubResource("RectangleShape2D_udruc")

[connection signal="mouse_entered" from="CharacterArea" to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="CharacterArea" to="." method="_on_mouse_exited"]
[connection signal="mouse_entered" from="TimerLabel/Control/TimerArea" to="TimerLabel" method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="TimerLabel/Control/TimerArea" to="TimerLabel" method="_on_area_2d_mouse_exited"]
